--- a/public/css/main.css
+++ b/public/css/main.css
@@ -214,9 +214,10 @@ th, td {
 }
 
 .column7 {
-    width: 14%;
-    padding-left: 20px;
+    width: 13%;
     text-align: center;
+    padding-right: 10px;
+
 }
 
 .table100-head th {
